WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250153
Live-ish resize sometimes pops to unexpected scroll position even if layout width doesn't change
https://bugs.webkit.org/show_bug.cgi?id=250153
Summary
Live-ish resize sometimes pops to unexpected scroll position even if layout w...
Tim Horton
Reported
2023-01-05 14:56:02 PST
Live-ish resize sometimes pops to unexpected scroll position even if layout width doesn't change
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-01-05 14:56:18 PST
<
rdar://problem/96702143
>
Tim Horton
Comment 2
2023-01-05 15:18:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8257
EWS
Comment 3
2023-01-05 17:48:32 PST
Committed
258521@main
(1a1e7ad8f8a7): <
https://commits.webkit.org/258521@main
> Reviewed commits have been landed. Closing PR #8257 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug